# composor

./: .gitignore  README.md  pyproject.toml
resources/: build.yaml
src/composor/: build_manager.py  deploy_manager.py
src/composor/utils/: __init__.py  git.py
tests/: test_build_manager.py  test_deployment_manager.py
